# todo3

./: .env  .gitignore  LICENSE  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
src/: App.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: _state.rs  main.rs  run_event.rs  system_tray.rs
src-tauri/src/entity/: Cargo.toml
src-tauri/src/entity/bindings/: CompleteStatus.ts  DeleteStatus.ts
src-tauri/src/entity/src/: lib.rs  prelude.rs  status.rs  tasks.rs
src-tauri/src/interection/: mod.rs  scheduler.rs  scheduler2.rs
src-tauri/src/migration/: Cargo.toml
src-tauri/src/migration/src/: lib.rs  m20220101_000001_create_tasks_table.rs
src-tauri/src/mutation/: mod.rs
src-tauri/src/query/: mod.rs
src-tauri/src/store/: create_db.rs  mod.rs
src-tauri/store/: database.db  database.db-shm  database.db-wal
src/bindings/: tasks.ts
src/bindings/status/: CompleteStatus.ts  DeleteStatus.ts  ShouldNotify.ts
src/components/: task.tsx
src/components/elements/Input/: CompleteButton.tsx  CompleteCheck.tsx  EditButton.tsx  InputDatetime.tsx  InputProject.tsx  InputState.tsx  InputTask.tsx  inputTaskStyle.ts  taskRegister.ts
src/components/elements/Input/DateTime/: DateForm.tsx  TimeForm.tsx  dateTimeStyle.ts
src/components/elements/Input/Title/: TitleForm.tsx  titleInputStyle.ts
src/components/elements/layouts/: header.tsx  projects.tsx  tab.tsx
src/components/elements/layouts/taskItem/: Content.tsx  Header.tsx  Row.tsx  TaskList.tsx  contentStyle.ts  headerStyle.ts  rowStyle.ts  typeTaskProps.ts
src/components/interection/: notification.tsx
src/ipcs/: index.ts  taskCommand.ts
store/: database.db  database.db-shm  database.db-wal
(+7 files in other folders)
