[package]
name = "todo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["notification-all", "shell-open", "system-tray", "window-minimize", "window-request-user-attention", "window-show"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
sea-orm = { version = "0.11.0", features = ["runtime-tokio-rustls", "macros", "sqlx-sqlite"] }
sqlx = { version = "0.5.9", features = ["sqlite", "runtime-tokio-rustls"] }
entity = { path = "./src/entity" }
dotenv = "0.15.0"
chrono = "0.4.23"
tokio-cron-scheduler = "0.9.4"
uuid = "1.3.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
