[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = "0.4.23"
tokio = { version = "1.25.0", features = ["full"] }
ts-rs = "6.2.1"

[dependencies.sea-orm]
version = "0.11.0" # sea-orm version
with-chrono = true